syntax = "proto3";

package raft_log;

message RaftLogEntry {
  CommandType type = 1;
  bytes payload = 2;
}

enum CommandType {
  COMMAND_TYPE_UNKNOWN = 0;
  COMMAND_TYPE_ADD_BLOCK = 1;
  COMMAND_TYPE_POLL_COMPACTION_JOBS_STATUS = 2;
}

message TruncateCommand {
  uint64 timestamp = 1;
}
